--- a/index.html
+++ b/index.html
@@ -5133,22 +5133,19 @@ input:checked + .toggle-slider:before {
                             <tbody>
                                 <tr>
                                     <td>Registrar's Office</td>
-                                    <td>Academic Records Clearance <br>
-                                    <div class="stat-label">(Ecr Submission & Uploading Ecr)</div> </td>
+                                    <td>Academic Records Clearance </td>
                                     <td><span class="status-badge status-completed">Completed</span></td>
                                     <td><button class="view-action">View</button></td>
                                 </tr>
                                 <tr>
                                     <td>Accounting Office</td>
                                     <td>Financial Clearance<br>
-                                    <div class="stat-label">(Budget Legislation)</div</td>
                                     <td><span class="status-badge status-completed">Completed</span></td>
                                     <td><button class="view-action">View</button></td>
                                 </tr>
                                 <tr>
                                     <td>Library</td>
                                     <td>Library Clearance<br>
-                                    <div class="stat-label">(Return Borrowed)</div</td>
                                     <td><span class="status-badge status-completed">Completed</span></td>
                                     <td><button class="view-action">View</button></td>
                                 </tr>
@@ -5159,8 +5156,7 @@ input:checked + .toggle-slider:before {
                                     <td><button class="view-action">View</button></td>
                                 </tr>
                                 <tr>
-                                    <td>Department of Academic Coordinator Requirement
-                                    <br>OIC / HoD / Dean</td>
+                                    <td>Department of Chair </td>                       
                                     <td>Department Clearance</td>
                                     <td><span class="status-badge status-completed">Completed</span></td>
                                     <td><button class="view-action">View</button></td>
