--- a/index.html
+++ b/index.html
@@ -4979,7 +4979,7 @@ input:checked + .toggle-slider:before {
                                 <i class="fas fa-calculator"></i>
                             </div>
                             <h3>Tentative Assessment</h3>
-                            <p>View your tentative tuition and fee assessment in Pesos (P)</p>
+                            <p>View your tentative tuition and fee assessment</p>
                             <button class="doc-btn">
                                 <i class="fas fa-eye"></i> View Assessment
                             </button>
