--- a/index.html
+++ b/index.html
@@ -5168,13 +5168,11 @@ input:checked + .toggle-slider:before {
                                 <tr>
                                     <td>Registrar's Office</td>
                                     <td>Academic Records Clearance <br>
-                                    <div class="stat-label">(Ecr Submission & Uploading Ecr)</div> </td>
                                     <td><span class="status-badge status-completed">Completed</span></td>
                                     <td><button class="view-action">View</button></td>
                                 </tr>
                                 <tr>
                                     <td>Accounting Office</td>
-                                    <td>Financial Clearance<br>
                                     <div class="stat-label">(Budget Legislation)</div</td>
                                     <td><span class="status-badge status-completed">Completed</span></td>
                                     <td><button class="view-action">View</button></td>
@@ -5182,7 +5180,6 @@ input:checked + .toggle-slider:before {
                                 <tr>
                                     <td>Library</td>
                                     <td>Library Clearance<br>
-                                    <div class="stat-label">(Return Borrowed)</div</td>
                                     <td><span class="status-badge status-completed">Completed</span></td>
                                     <td><button class="view-action">View</button></td>
                                 </tr>
@@ -5193,8 +5190,7 @@ input:checked + .toggle-slider:before {
                                     <td><button class="view-action">View</button></td>
                                 </tr>
                                 <tr>
-                                    <td>Department of Academic Coordinator Requirement
-                                    <br>OIC / HoD / Dean</td>
+                                    <td>Department of Chair</td>
                                     <td>Department Clearance</td>
                                     <td><span class="status-badge status-completed">Completed</span></td>
                                     <td><button class="view-action">View</button></td>
@@ -5206,8 +5202,7 @@ input:checked + .toggle-slider:before {
                                     <td><button class="view-action">View</button></td>
                                 </tr>
                                 <tr>
-                                    <td>Laboratory<br>
-                                    Campus Coordinator</td>
+                                    <td>Laboratory</td>
                                     <td>Laboratory Equipment Clearance</td>
                                     <td><span class="status-badge status-pending">Pending</span></td>
                                     <td><button class="upload-action">Submit</button></td>
