--- a/index.html
+++ b/index.html
@@ -5173,7 +5173,7 @@ input:checked + .toggle-slider:before {
                                 </tr>
                                 <tr>
                                     <td>Accounting Office</td>
-                                    <div class="stat-label">(Budget Legislation)</div</td>
+                                    <td>Accounting</td>
                                     <td><span class="status-badge status-completed">Completed</span></td>
                                     <td><button class="view-action">View</button></td>
                                 </tr>
