--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     --success: #28a745;
     --info: #17a2b8;
     --gcash: #0033A0;
+    
     --border-radius: 8px;
     --box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     --transition: all 0.3s ease;
@@ -4224,7 +4225,7 @@ input:checked + .toggle-slider:before {
                                     <div class="detail-value">First</div>
                                 </div>
                                 <div class="detail-item">
-                                    <div class="detail-label">Religion Affiliation</div>
+                                    <div class="detail-label">Religious Affiliation</div>
                                     <div class="detail-value">Catholic</div>
                                 </div>
                                 <div class="detail-item">
