--- a/index.html
+++ b/index.html
@@ -3854,7 +3854,7 @@
                                                                     overflow-y: auto;
                                                                     position: relative;
                                                                     box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
-                                                                    color: var(--text-color);
+                                                                    color: white;
                                                                 }
 
                                                                 .modal-close {
@@ -3863,7 +3863,7 @@
                                                                     right: 15px;
                                                                     font-size: 24px;
                                                                     cursor: pointer;
-                                                                    color: var(--text-color);
+                                                                    color: white;
                                                                 }
 
                                                                 .modal-close:hover {
@@ -3871,12 +3871,12 @@
                                                                 }
 
                                                                 .modal-content h3 {
-                                                                    color: var(--text-color);
+                                                                    color: white;
                                                                     margin-top: 0;
                                                                 }
 
                                                                 .modal-content small {
-                                                                    color: var(--text-color);
+                                                                    color: white;
                                                                 }
 
                                                                 /* Glass Modal Styles */
@@ -4553,7 +4553,7 @@
 
                                                                                     <div class="stat-card" id="uniforms-summary-card">
                                                                                         <div class="stat-value" id="uniforms-summary">
-                                                                                            <div style="display:flex;flex-direction:column;gap:6px; align-items: center;">
+                                                                                            <div style="display:flex;flex-direction:column;gap:6px;">
                                                                                                 
                                                                                                 <div style="display:flex;justify-content:space-between;align-items:center;" data-uniform="BSIT">
                                                                                                     <small style="color:var(--text-color);">BSIT Uniform</small>
