--- a/index.html
+++ b/index.html
@@ -4650,7 +4650,7 @@
                                                                                         <div class="stat-value" id="drugtest-summary">
                                                                                             <div style="display:flex;flex-direction:column;gap:6px;">
                                                                                                 <div style="margin-bottom:8px">
-                                                                                                    <small style="color:var(--text-color);font-weight:500;">Drug Test Status</small>
+                                                                                                    <small style="color:var(--text-color);font-weight:500;">Medical</small>
                                                                                                 </div>
                                                                                                 <div style="display:flex;justify-content:space-between;align-items:center;">
                                                                                                     <small style="color:var(--text-color);">1st Year (10/04/2022)</small>
@@ -4670,7 +4670,7 @@
                                                                                                 </div>
                                                                                             </div>
                                                                                         </div>
-                                                                                        <div class="stat-label">Drug Test</div>
+                                                                                        <div class="stat-label">Meical</div>
                                                                                     </div>
 
                                                                                     <div class="stat-card">
