--- a/index.html
+++ b/index.html
@@ -6000,7 +6000,7 @@
                                                                                         <div class="breadcrumb">
                                                                                             <a href="#" data-section="dashboard">Dashboard</a> <i class="fas fa-chevron-right"></i> <span>Current Subjects</span>
                                                                                         </div>
-                                                                                        <h1 class="page-title">Current Subjects / Couses</h1>
+                                                                                        <h1 class="page-title">Current Subjects / Courses</h1>
                                                                                         <div class="card">
                                                                                             <div class="card-header">
                                                                                                 <h2 class="card-title">Registered Subjects / Courses (2025-2026, 4th Year, First Term)</h2>
@@ -6009,8 +6009,8 @@
                                                                                                 <table>
                                                                                                     <thead>
                                                                                                         <tr> 
-                                                                                                            <th>Subject / Couse Code</th>
-                                                                                                            <th>Subject / Couse Title</th>
+                                                                                                            <th>Subject / Course Code</th>
+                                                                                                            <th>Subject / Course Title</th>
                                                                                                             <th>Lec</th.>
                                                                                                             <th>Lab</th>
                                                                                                             <th>Units</th>
